# AgroVaxx

./: .gitignore  .gitmodules  .mbedignore  CMakeLists.txt  README.md  main.cpp  mbed_app.json
.github/workflows/: ci.yml
core/: Interfaces.h  StateMachine.cpp  StateMachine.h  TagDedupFilter.cpp  TagDedupFilter.h
docs/: app_inventor_instructions.md
drivers/: MFRC522.cpp  MbedBluetooth.h  MbedRfidMFRC522.h  MbedSimpleDrivers.h
tests/: CMakeLists.txt  MockDrivers.h  hw_test_ble.cpp  hw_test_led_button.cpp  hw_test_rfid.cpp  run_tests  test_state_machine.cpp
